@@ -102,7 +102,7 @@ set_eflags(unsigned eflags)
 #define	get_cr0() \
     ({ \
 	register unsigned int _temp__; \
-	asm("mov %%cr0, %0" : "=r" (_temp__)); \
+	asm volatile("mov %%cr0, %0" : "=r" (_temp__)); \
 	_temp__; \
     })
 
@@ -115,14 +115,14 @@ set_eflags(unsigned eflags)
 #define	get_cr2() \
     ({ \
 	register unsigned int _temp__; \
-	asm("mov %%cr2, %0" : "=r" (_temp__)); \
+	asm volatile("mov %%cr2, %0" : "=r" (_temp__)); \
 	_temp__; \
     })
 
 #define	get_cr3() \
     ({ \
 	register unsigned int _temp__; \
-	asm("mov %%cr3, %0" : "=r" (_temp__)); \
+	asm volatile("mov %%cr3, %0" : "=r" (_temp__)); \
 	_temp__; \
     })
 
@@ -137,7 +137,7 @@ set_eflags(unsigned eflags)
 #define	get_cr4() \
     ({ \
 	register unsigned int _temp__; \
-	asm("mov %%cr4, %0" : "=r" (_temp__)); \
+	asm volatile("mov %%cr4, %0" : "=r" (_temp__)); \
 	_temp__; \
     })
 
@@ -157,7 +157,7 @@ set_eflags(unsigned eflags)
 #define	get_tr() \
     ({ \
 	unsigned short _seg__; \
-	asm("str %0" : "=rm" (_seg__) ); \
+	asm volatile("str %0" : "=rm" (_seg__) ); \
 	_seg__; \
     })
 
@@ -167,7 +167,7 @@ set_eflags(unsigned eflags)
 #define	get_ldt() \
     ({ \
 	unsigned short _seg__; \
-	asm("sldt %0" : "=rm" (_seg__) ); \
+	asm volatile("sldt %0" : "=rm" (_seg__) ); \
 	_seg__; \
     })
 
